# soc-env-hackathon

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  inference.py  local_logs.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  test.py  types.py  validate-submission.sh
.github/workflows/: hf_space_heartbeat.yml
api/: engine.py  main.py
baseline/: agent.py  baseline_agent.py  llm_agent.py
server/: __init__.py  app.py  soc_analyst_env_environment.py
soc_analyst_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
soc_analyst_env/agents/: __init__.py
soc_analyst_env/benchmark_scenarios/: README.md  __init__.py
soc_analyst_env/openenv_soc_analyst_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
soc_analyst_env/server/: Dockerfile  __init__.py  app.py  dashboard.py  engine.py  generators.py  logging.py  models.py  rubrics.py  soc_analyst_env_environment.py  telemetry.py
soc_analyst_env/server/scenarios/: task_easy.json  task_hard.json  task_medium.json
